# seapower

./: .gitignore  Cargo.toml  LICENSE  README.md  fullShipList.csv  game_notes.md  index.html  package-lock.json  package.json  shipmanifest.json  stuff.py
html/: ShipPagination.html  init_game.html
public/: Gun.py  Ship.py  Utils.py  customstyles.css  shipmanifest.json
python/: guns.py  main.py
python/ships/: define.py
seapower/: db.sqlite3  manage.py
seapower/seapower/: asgi.py  settings.py  urls.py  wsgi.py
seapower/seapower_ui/: apps.py  urls.py  views.py
seapower/seapower_ui/data/: Ship.py  Utils.py  shipmanifest.json
seapower/seapower_ui/static/: styles.css
seapower/seapower_ui/templates/: GunCard.html  Navigation.html  Ship.html  ShipPopupCard.html  ShipSelector.html  base.html  landing.html
ships/: US.py
src/: app.d.ts  app.postcss  app.rs  lib.rs  main.rs  ships.ts  testy.rs  theme.postcss
src-tauri/: tauri.conf.json
src/components/: buttons.rs  mod.rs
src/lib/components/: Navigation.svelte
src/lib/components/flags/: CN.svelte  DE.svelte  FR.svelte  GB.svelte  IT.svelte  JP.svelte  RU.svelte  US.svelte
src/lib/files/: csvOut.csv  shipmanifest.json  shipmanifest2.json
src/lib/objects/: GameState.ts  Gun.ts  Misc.ts  SaveFile.ts  Ship.ts
src/pages/: home.rs  init_game.rs  mod.rs  play_game.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/init_game/: +page.svelte
src/routes/landing/: +page.svelte
src/types/: default_state.rs  gun.rs  mod.rs  ship.rs  util.rs
style/: tailwind.css
(+9 files in other folders)
